# Mesh

./: .gitignore  .pre-commit-config.yaml  AGENT_RULES.md  Act1_ContentPlan.md  Act2_ContentPlan.md  MANIFEST.in  MeshGame.spec  README.md  check_arcade_lights.py  check_backspace.py  config.json  conftest.py  content.changelog.md  cutscenes.json  editor_hd2d_controller.py  hd2d_batch_radius_model.py  hd2d_entity_overrides_model.py  hd2d_look_presets_model.py  hd2d_override_batch_apply_model.py  hd2d_preset_preview_model.py  inspect_arcade_future_light.py  inspect_arcade_future_light_lights.py  inspect_light.py  inspect_light_layer.py  last_implementation.md  main.py  mesh.bat  mesh_cli.py  parse_rathena_packets.py  parse_rathena_packets_v2.py  prefabs.golden.json  projects.json  pygbag.toml  pyproject.toml  pyrightconfig.json  pytest.ini  pytest_out.txt  rathena_packet_table_20190605.txt  scene_change_debug.txt  task_summary.md  (+9 more)
.claude/: settings.local.json
assets/: prefabs.json  prefabs.schema.json
docs/: ACT1.md  Act1_ReleaseChecklist.md  Act2_ReleaseChecklist.md  Commands.md  DEMO.md  GOLDEN_SLICE_DEMO.md  GOLDEN_SLICE_VARIANTS.md  INPUT_BINDS.md  PlayerBuild.md  ReleaseChecklist.md  SCENE_INDEX.md  ShippingReadiness.md  Untitled-1.txt  ai_authoring.md  ai_workflow.md  arcade3_migration.md  architecture_hardening_phase38.md  behaviours.md  campaign_replay_check.md  ci.md  ci_verify_bundle.md  combat_vignette_01.md  console.md  content_audit.md  content_scaffold.md  debug_diagnostics.md  demo_run.md  developer_guide.md  editor_design_system.md  episode_01_intro.md  episode_02_ep02.md  episode_03_ep03.md  episode_04_ep04.md  episode_05_ep05.md  episode_06_ep06.md  episode_replay_check.md  input.md  keymap.example.json  map_collision_paint.md  mcp_server.md  (+28 more)
engine/: __init__.py  actions.py  ai_audit.py  ai_bundle.py  ai_debug_overlay.py  ai_history.py  ai_ops.py  animation.py  animation_state.py  arcade_compat.py  arcade_fallback.py  asset_hot_reload_watcher.py  asset_index.py  asset_place_overlay.py  assets.py  assets_reload.py  audio.py  background_layers.py  behaviour_event_router.py  behaviour_event_router_model.py  brushes.py  camera_controller.py  capture_mode.py  combat_constants.py  combat_model.py  command_palette.py  command_palette_controller.py  command_palette_help.py  command_palette_preview.py  command_palette_registry.py  command_palette_registry_actions.py  command_palette_registry_actions_impl.py  command_palette_registry_defs.py  command_palette_registry_options.py  command_palette_registry_parse.py  command_palette_registry_parse_helpers.py  command_palette_registry_selection.py  command_palette_registry_support.py  command_palette_state.py  companion_diagnostics.py  (+150 more)
jobs/: add_crate_room.json  add_npc_dialogue.json  tune_enemy_stats.json
locales/: en.json
mesh_cli/: __init__.py  __main__.py  ai.py  artifacts_diff.py  artifacts_validate.py  assets.py  authoring.py  baseline_update.py  blank_project.py  build.py  bundle_verify.py  campaign.py  common.py  content.py  content_integrity.py  content_scaffold.py  cutscene.py  debug.py  debug_report.py  demo.py  episode.py  export.py  fx.py  headless_arcade.py  health_report.py  legacy.py  legacy_impl.py  macro.py  main.py  mcp_setup.py  misc.py  new_game.py  new_project.py  pack.py  pipeline.py  plan.py  player_package.py  prefabs.py  qa.py  release.py  (+30 more)
plans/: ashen_region.plan.json  golden_slice_noop.json  plan.json  plan_hollow.json  plan_ridge.json  region_showcase.plan.json
presets/: act1_chapter1.json  act1_chapter2.json  act1_chapter3.json  act1_chapter4.json  act1_chapter5.json  act1_demo.json  act1_demo_extended.json  act1_full_demo.json  act1_index.json  act1_prologue.json  agent-ci.json  ai-authoring-check.json  assist-golden-slice-dryrun.json  ci-check.json  config_presets.json  demo_master.json  encounter-balance-sweep.json  encounter-ci-diff.json  encounter-ci.json  golden_slice.json  golden_slice2_index.json  golden_slice2_showcase.json  golden_slice2_showcase_all.json  golden_slice2_variant_g.json  golden_slice2_variant_j.json  golden_slice2_variant_k.json  golden_slice2_variant_m.json  golden_slice2_variant_n.json  golden_slice_demo_all.json  golden_slice_index.json  golden_slice_showcase.json  golden_slice_showcase_all.json  golden_slice_variant_b.json  golden_slice_variant_c.json  golden_slice_variant_d.json  golden_slice_variant_e.json  golden_slice_variant_f.json  golden_slice_variant_g.json  golden_slice_variant_h.json  golden_slice_variant_i.json  (+7 more)
replays/: 00_smoke_dump_state.hash.json  00_smoke_dump_state.json  campaign03_help.json  campaign03_silent.json  campaign04_bonus.json  campaign04_standard.json  campaign05_standard.json  campaign05_variant.json  ep01.json  ep02.json  ep03.json  ep04.json  ep05.json  ep06.json  suite.json
scenes/: cellar.json  combat_tutorial_demo.json  combat_vignette_01.json  door_field.json  door_interior.json  episode_01_intro.json  episode_02_ep02.json  episode_03_ep03.json  episode_04_ep04.json  episode_05_ep05.json  episode_06_ep06.json  game1a_combat_room.json  guard_patrol_chase_demo.json  guard_patrol_chase_duo_demo.json  lighting_showcase.json  main_menu.json  micro_stealth_completion_room.json  outside.json  puzzle_room_01.json  puzzle_room_02.json  puzzle_room_03.json  reward_nook_01.json  runtime_smoke_scene.json  showcase_dungeon.json  showcase_hub.json  showcase_interior.json  side_room_01.json  stamp_audit_sandbox.json  target.json  test_scene.json  town_schedule_01.json  upper_hall.json  upper_hall_vault.json
seb/: config.json  projects.json
seb1/: config.json  projects.json
seb2/: config.json  projects.json
tests/: __init__.py  _command_palette_window_stub.py  _dock_stub.py  _editor_window_stub.py  _game_window_live.py  _game_window_undo_stub.py  _search_stub.py  _session_stub.py  _typing.py  _variant_contracts.py  arcade_stub.py  conftest.py  cutscene_helpers.py  fixture_repo.py  subprocess_tools.py  test_accessibility_text_scale.py  test_act1_chapter1_preset_exists.py  test_act1_chapter1_slice.py  test_act1_chapter2_slice.py  (+1680 more)
(+1123 files in other folders)
