[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh-engine"
version = "0.4.0"
description = "Mesh Game Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # arcade: supports 2.6.17+ and 3.x series. Upper bound prevents untested major versions.
    # When arcade 4.x releases, test and update this bound deliberately.
    "arcade>=2.6.17,<4.0",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest>=8.0",
]

[project.scripts]
mesh = "mesh_cli:main"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["engine*", "mesh_cli*"]

# Runtime data is included via MANIFEST.in + include-package-data = true
# See MANIFEST.in for the complete list of included assets

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "W"]
ignore = ["E501", "E701", "E741", "F841"]
exclude = [
    "tests",
    "build",
    "dist",
    ".git",
    "__pycache__",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
exclude = [
    "tests",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = [
    "engine.ai_audit",
    "engine.ai_bundle",
    "engine.ai_debug_overlay",
    "engine.behaviours.*",
    "engine.console_controller",
    "engine.editor_controller",
    "engine.game",
    "engine.scene_controller",
    "engine.tilemap",
]
disallow_untyped_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "engine.physics_model",
    "engine.sensors_model",
    "engine.editor.project_explorer_rank_model",
    "engine.physics_broadphase_key_model",
]
disallow_any_generics = true
warn_return_any = true
no_implicit_optional = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
check_untyped_defs = true

# pytest config is in pytest.ini (single source of truth).
# Do not add [tool.pytest.ini_options] here to avoid drift.
