[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh-engine"
version = "0.5.0"
description = "Mesh Game Engine"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.11"
dependencies = [
    # Runtime line after Arcade 3.x migration.
    "arcade>=3,<4",
    "jsonschema>=4,<5",
    "pillow>=10,<12",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest>=8.0",
]

[project.scripts]
mesh = "mesh_cli:main"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["engine*", "mesh_cli*"]

# Runtime data is included via MANIFEST.in + include-package-data = true
# See MANIFEST.in for the complete list of included assets

[tool.ruff]
line-length = 140
select = ["E", "F", "I", "W"]
ignore = ["E701", "E741"]
exclude = [
    "build",
    "dist",
    ".git",
    "__pycache__",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
exclude = [
    "tests",
    "build",
    "dist",
    "artifacts",
    "examples",
]

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.quest_giver",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.emit_event_on_event",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.collectible",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.scene_transition",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.pickup_collectible",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.wander",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.trigger_volume",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.patrol_path",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.flee_from_target",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.follow_path",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.chase_target",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.health",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.interactable",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.hitbox",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.inventory_holder",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.vendor",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.light_source",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.saveable",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.camera_follow",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.animator",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.main_menu",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.ranged_attack_ai",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.ranged_enemy_ai",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.shooter",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.projectile",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.offer_perk_choice",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.combat",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.npc_schedule",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.enemy_ai",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.patrol_chase",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.dialogue_runner",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.quest_hook",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.puzzle_behaviours",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.registry",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.utils",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.base",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.sequence_player",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.player_controller",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.dialogue",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.behaviours.action_list_runner",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
    "engine.physics_model",
    "engine.sensors_model",
    "engine.editor.project_explorer_rank_model",
    "engine.physics_broadphase_key_model",
    "engine.spatial_hash_model",
    "engine.render_sort_model",
    "engine.scene_entity_ops_model",
    "engine.scene_lifecycle_model",
    "engine.scene_navigation_model",
    "engine.scene_transition_policy_model",
    "engine.scene_update_model",
    "engine.depth_tint_model",
    "engine.hd2d_debug_model",
    "engine.hud_model",
    "engine.combat_model",
    "engine.events",
    "engine.game_state_controller",
    "engine.camera_controller",
    "engine.audio",
    "engine.assets",
    "engine.config",
    "engine.rng_service",
    "engine.json_io",
]
disallow_any_generics = true
warn_return_any = true
no_implicit_optional = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
check_untyped_defs = true

# pytest config is in pytest.ini (single source of truth).
# Do not add [tool.pytest.ini_options] here to avoid drift.
