[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh-engine"
version = "0.5.0"
description = "Mesh Game Engine"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.11"
dependencies = [
    # Runtime line after Arcade 3.x migration.
    "arcade>=3,<4",
    "jsonschema>=4,<5",
    "pillow>=10,<12",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.16",
    "mypy==1.19.1",
    "pygbag==0.9.3",
    "pytest>=8.0",
]
# Optional: enables the Mesh MCP server (engine.mcp_server) so MCP-capable
# AI clients can drive the engine. The engine never hard-requires this; the
# server module imports it behind a guard. Install with: pip install -e .[mcp]
mcp = [
    "mcp>=1.0",
]
# Optional: enables the native in-editor Claude chatbox. The engine imports it
# behind a guard and keeps editor startup safe without this extra. Install with:
# pip install -e .[chat]
chat = [
    # 0.112.0 is the current published SDK; model id and adaptive thinking are API-validated request fields.
    "anthropic>=0.112.0,<1",
]

[project.scripts]
mesh = "mesh_cli:main"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["engine*", "mesh_cli*"]

# Runtime data is included via MANIFEST.in + include-package-data = true
# See MANIFEST.in for the complete list of included assets

[tool.ruff]
line-length = 160
exclude = [
    "build",
    "dist",
    ".git",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"engine/editor_runtime/input.py" = ["F401", "I001"]
"engine/arcade_fallback.py" = ["E741"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
exclude = [
    "tests",
    "build",
    "dist",
    "artifacts",
    "examples",
]

# Keep these data-model modules stricter than the repo default because they are
# stable typing islands with clear return types and generic usage.
# Remove this override only after the same strict settings are enforced
# globally, or after these modules are moved under a stricter shared section.
[[tool.mypy.overrides]]
module = [
    "engine.physics_model",
    "engine.sensors_model",
    "engine.editor.project_explorer_rank_model",
    "engine.physics_broadphase_key_model",
    "engine.spatial_hash_model",
    "engine.render_sort_model",
    "engine.scene_entity_ops_model",
    "engine.scene_lifecycle_model",
    "engine.scene_navigation_model",
    "engine.scene_transition_policy_model",
    "engine.scene_update_model",
    "engine.depth_tint_model",
    "engine.hd2d_debug_model",
    "engine.hud_model",
    "engine.combat_model",
    "engine.events",
    "engine.game_state_controller",
    "engine.camera_controller",
    "engine.audio",
    "engine.assets",
    "engine.config",
    "engine.rng_service",
    "engine.json_io",
]
disallow_any_generics = true
warn_return_any = true
no_implicit_optional = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
check_untyped_defs = true

# GameWindow decomposition intentionally binds facade functions onto the class
# at startup; mypy reports one method-assign error per binder entry even though
# the pattern is deliberate and exercised by tests.
# Remove this override only if bind_state_facade_methods is refactored to a
# mypy-friendly shape such as explicit methods, descriptors, or a Protocol-based
# facade that avoids class attribute monkey-patching.
[[tool.mypy.overrides]]
module = [
    "engine.game_parts.state_facade",
]
disable_error_code = ["method-assign"]

# pytest config is in pytest.ini (single source of truth).
# Do not add [tool.pytest.ini_options] here to avoid drift.
